--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/core-js": "^2.5.4",
     "angular": "^1.8.2",
     "cheerio": "^1.0.0-rc.3",
+    "querystring": "^0.2.0",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
