--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "angular": "^1.8.2",
     "cheerio": "^1.0.0-rc.3",
     "querystring": "^0.2.0",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.14"
